Started to make a stone_oven to bake the bread

--- a/src/main/resources/assets/forestry/lang/en_us.json
+++ b/src/main/resources/assets/forestry/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.forestry": "LIVING OFF THE LAND",
   "item.forestry.flour": "Flour",
   "item.forestry.dough": "Dough",
   "item.forestry.milk_bread": "Milk Bread"
