--- a/src/main/resources/assets/forestry/lang/en_us.json
+++ b/src/main/resources/assets/forestry/lang/en_us.json
@@ -2,5 +2,7 @@
   "itemGroup.forestry": "LIVING OFF THE LAND",
   "item.forestry.flour": "Flour",
   "item.forestry.dough": "Dough",
-  "item.forestry.milk_bread": "Milk Bread"
+  "item.forestry.milk_bread": "Milk Bread",
+
+  "block.forestry.ash_block": "Block of Ash"
 }
