--- a/src/main/resources/assets/forestry/lang/en_us.json
+++ b/src/main/resources/assets/forestry/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.forestry.flour": "Flour",
   "item.forestry.dough": "Dough",
   "item.forestry.milk_bread": "Milk Bread",
+  "item.forestry.lighter": "Lighter",
+
 
   "block.forestry.ash_block": "Block of Ash",
   "block.forestry.stone_oven": "Stone Oven",
