Added a test custom block and made ash a ColoredFallingBlock

--- a/src/main/resources/assets/forestry/lang/en_us.json
+++ b/src/main/resources/assets/forestry/lang/en_us.json
@@ -8,6 +8,7 @@
 
   "block.forestry.ash_block": "Block of Ash",
   "block.forestry.stone_oven": "Stone Oven",
+  "block.forestry.magic_block": "Test block",
 
   "creativetab.forestry.forestry_block": "Forestry Blocks",
   "creativetab.forestry.forestry_item": "Forestry Items"
